Pets. Also tabs to spaces.

--- a/data/parser.conf
+++ b/data/parser.conf
@@ -132,7 +132,7 @@ int32
 
 027 - Key Items
 0
-ID;Name;?;?;?;?;?;?;?;?;?
+ID;Name;Models;Surfaces;?;Cooldown;Sell Price;Buy Price;Stack;?;Flags
 int32;wstring:64;string:128;string:128;float;int32;int32;int32;int32;int32;int32
 
 028 - Chi Stones
@@ -142,7 +142,7 @@ int32;wstring:64;string:128;string:128;int32;int32;int32;int32;int32;int32
 
 029 - Quest Items
 0
-ID;Name;Surfaces;Stack;?;flags
+ID;Name;Surfaces;Stack;?;Flags
 int32;wstring:64;string:128;int32;int32;int32
 
 030 - Ammunition
@@ -472,12 +472,12 @@ int32;wstring:64
 
 095 - Pets
 0
-ID;Type;Name;?;?;Max Pet Level;Start Player Level;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?
+ID;Type;Name;Models;Surfaces;Class Mask;Max Pet Level;Min Player Level;?;HP delta;?;?;?;?;?;Attack x;Attack a;Attack b;Attack c;Speed Base;Speed Delta;Accuracy Delta;?;?;Evasion Delta;?;?;pdef delta;pdef y;?;?;mdef delta;mdef y;?;?;?;?;?;?;?;?;?;Interval;?;?;Movement A;Movement B;?;?;?;?;?
 int32;int32;wstring:64;string:128;string:128;int32;int32;int32;int32;float;float;float;float;float;float;float;float;float;float;float;float;float;float;float;float;float;float;float;float;float;float;float;float;float;float;float;float;float;float;float;float;float;float;int32;int32;int32;int32;int32;int32;int32;int32;int32
 
 096 - Pet Eggs
 0
-ID;Name;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?
+ID;Name;Models;Surfaces;Hatches Into;Hatch Price;Unhatch Price;Loyalty;Level;?;?;Skill 1;Level 1;Skill 2;Level 2;Skill 3;Level 3;Skill 4;Level 4;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;?;Sell Price;Buy Price;Stack;?;Flags
 int32;wstring:64;string:128;string:128;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32;int32
 
 097 - Pet Food
